--- a/index.html
+++ b/index.html
@@ -5,17 +5,23 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <!-- zomato logo in the tab -->
   <link rel="icon" type="image/x-icon"
     href="https://upload.wikimedia.org/wikipedia/commons/thumb/7/75/Zomato_logo.png/220px-Zomato_logo.png" />
+  <!-- font awesome icons -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
     integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <!-- poppins font by google fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link
-    href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap"
+    href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
     rel="stylesheet" />
+
+  <!-- importing styles.css -->
   <link rel="stylesheet" href="styles.css" />
+
   <title>Zomato Clone</title>
 </head>
 
@@ -25,8 +31,8 @@
       <nav class="navbar">
         <a href="#">Get The App</a>
         <div class="navbar__menu_container">
-          <a href="#" class="link">Investor Relations</a>
-          <a href="#" class="link">Add Restaurant</a>
+          <a href="#" class="link">Inventor Relations</a>
+          <a href="#" class="link">Add Resutrant</a>
           <a href="#" class="link">Login</a>
           <a href="#" class="link">Sign Up</a>
           <a href="#" class="user__icon">
@@ -41,24 +47,23 @@
       <h1 class="hero__section_title">Discover the best food & drinks in Bangalore</h1>
       <div class="hero__section_input_container">
         <input type="text" class="input_container_location" placeholder="Bangalore" />
-        <input type="text" class="input_container_search" placeholder="Search for a restaurant, cuisine or dish" />
+        <input type="text" class="input_container_search" placeholder="Search for a resturant, cuisine or dish" />
       </div>
     </div>
   </section>
-
   <section class="container__we_offer">
     <div class="we__offer_card">
       <img src="./images/item1.png" alt="Item 1" />
       <div class="we__offer_content">
         <h2>Order Online</h2>
-        <p>Stay home and order to your door</p>
+        <p>Stay home and ordere to your door</p>
       </div>
     </div>
     <div class="we__offer_card">
       <img src="./images/item2.png" alt="Item 2" />
       <div class="we__offer_content">
         <h2>Dining</h2>
-        <p>View the city's favourite dining venues</p>
+        <p>View the city's favourite dining venus</p>
       </div>
     </div>
     <div class="we__offer_card">
@@ -69,47 +74,50 @@
       </div>
     </div>
   </section>
-
   <section class="container collections">
-    <h1>Collections</h1>
+    <h1>collections</h1>
     <div class="sub__heading_container">
       <span>
-        Explore curated lists of top restaurants, cafes, pubs, and bars in Bangalore
+        Explore curated lists of top resturants, cafes, pubs, and barsin, Bangalore
       </span>
-      <span>All Collections in Bangalore</span>
+      <span>
+        All Collections in Bangalore
+      </span>
     </div>
     <div class="collections_card_container">
       <div class="card card1">
         <div class="overlay"></div>
         <div class="content">
           <h4>Live Cricket Screening</h4>
-          <span>60 places</span>
+          <span> 60 places</span>
         </div>
       </div>
+
       <div class="card card2">
         <div class="overlay"></div>
         <div class="content">
           <h4>Some Special Sweets</h4>
-          <span>80 places</span>
+          <span> 80 places</span>
         </div>
       </div>
+
       <div class="card card3">
         <div class="overlay"></div>
         <div class="content">
-          <h4>Newly Opened Restaurants</h4>
-          <span>90 places</span>
+          <h4>Newly Opened resturants</h4>
+          <span> 90 places</span>
         </div>
       </div>
       <div class="card card4">
         <div class="overlay"></div>
         <div class="content">
-          <h4>Great Cafes Near Me</h4>
-          <span>50 places</span>
+          <h4>Great Cafes, near me</h4>
+          <span> 50 places</span>
         </div>
       </div>
     </div>
-  </section>
 
+  </section>
   <section class="container get__the_app">
     <div class="semiContainer">
       <div class="left">
@@ -118,22 +126,25 @@
       <div class="right">
         <h1>Get the Zomato App</h1>
         <p>We will send you a link, open it on your phone to download the app</p>
+
         <div class="radio__button_container">
           <div>
             <input type="radio" name="download_app" id="email" />
-            <label for="email">Email</label>
+            <label for="email" style="font-size: 14px;">Email</label>
           </div>
           <div>
             <input type="radio" name="download_app" id="phone" />
-            <label for="phone">Phone</label>
+            <label for="phone" style="font-size: 14px;">Phone</label>
           </div>
+
         </div>
+
         <div class="input_container">
           <input type="text" placeholder="Email" />
           <button>Share App Link</button>
         </div>
         <div class="download__app_container">
-          <h5>Download App From</h5>
+          <h5>Download App Form</h5>
           <div>
             <img src="images/appleStore.png" alt="Apple Store" />
             <img src="images/playStore.png" alt="Play Store" />
@@ -142,7 +153,6 @@
       </div>
     </div>
   </section>
-
   <footer class="container footer">
     <div class="footer_section1">
       <img src="images/logo.png" alt="Zomato Logo" />
@@ -161,32 +171,37 @@
         <a class="footer__link" href="#">Who we are</a>
         <a class="footer__link" href="#">Blogs</a>
         <a class="footer__link" href="#">Work with us</a>
-        <a class="footer__link" href="#">Investor Relations</a>
+        <a class="footer__link" href="#">Investore Relations</a>
         <a class="footer__link" href="#">Report Fraud</a>
-        <a class="footer__link" href="#">Contact Us</a>
+        <a class="footer__link" href="#">Conatct Us</a>
       </div>
+
       <div class="link__container">
         <h5>ZOMAVERSE</h5>
         <a class="footer__link" href="#">Zomato</a>
-        <a class="footer__link" href="#">Feeding India</a>
+        <a class="footer__link" href="#">Feeding</a>
         <a class="footer__link" href="#">Hyperpure</a>
         <a class="footer__link" href="#">Zomaland</a>
       </div>
+
       <div class="link__container">
-        <h5>FOR RESTAURANTS</h5>
+        <h5>FOR RESTURANTS</h5>
         <a class="footer__link" href="#">Partner With Us</a>
         <a class="footer__link" href="#">Apps For You</a>
         <br />
-        <h5>ENTERPRISES</h5>
-        <a class="footer__link" href="#">Zomato for Work</a>
+        <h5>ENTERPRICES</h5>
+        <a class="footer__link" href="#">Work with us</a>
+        <a class="footer__link" href="#">Zomato for work</a>
       </div>
+
       <div class="link__container">
         <h5>LEARN MORE</h5>
         <a class="footer__link" href="#">Privacy</a>
         <a class="footer__link" href="#">Security</a>
         <a class="footer__link" href="#">Terms</a>
-        <a class="footer__link" href="#">Sitemap</a>
-      </div>
+        <a class="footer__link" href="#">SiteMap</a>
+      </div>      
+
       <div class="link__container">
         <h5>SOCIAL LINKS</h5>
         <div class="social__links_container">
@@ -201,10 +216,10 @@
         <img src="images/playStore.png" alt="Footer Logos" class="footer__section_logos" />
       </div>
     </div>
-    <div class="disclaimer">
+    <div class="disclamer">
       By continuing past this page, you agree to our Terms of Service,
       Cookie Policy, Privacy Policy and Content Policies. All trademarks
-      are properties of their respective owners. 2008-2025 © Zomato™ Ltd.
+      are properties of their respective owners. 2008-2022 © Zomato™ Ltd.
       All rights reserved.
     </div>
   </footer>
